--- a/index.html
+++ b/index.html
@@ -167,41 +167,56 @@
 
     <footer>
       <div class="container">
-        <div class="left">
-          <img src="./public/logo.png" alt="logo">
-          <p>Insurance is too complicated. Draft 
-            understands its customers and make the
-            process simple for them. </p>
-          <button>Ask Question</button>
+        <div class="wrapper">
+          <div class="left">
+            <img src="./public/logo.png" alt="logo">
+            <p>Insurance is too complicated. Draft 
+              understands its customers and make the
+              process simple for them. </p>
+            <button>Ask Question</button>
+          </div>
+
+          <div class="right">
+            <table>
+              <tbody>
+                <tr>
+                  <th>Community</th>
+                  <th>About us</th>
+                  <th>Contacts</th>
+                </tr>
+                <tr>
+                  <td>For Talents</td>
+                  <td>For Companies</td>
+                  <td>Facebook Group</td>
+                  <td>FAQ</td>
+                </tr>
+                <tr>
+                  <td>Meet the Team</td>
+                  <td>Our Story</td>
+                  <td>Career</td>
+                </tr>
+                <tr>
+                  <td>Feel free to </td>
+                  <td>+1-301-340-3946 <br>
+                    info@draft.com</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-        <div class="right">
-          <table>
-            <thead>
-              <tr>
-                <th>Community</th>
-                <th>About us</th>
-                <th>Contacts</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>For Talents</td>
-                <td>For Companies</td>
-                <td>Facebook Group</td>
-                <td>FAQ</td>
-              </tr>
-              <tr>
-                <td>Meet the Team</td>
-                <td>Our Story</td>
-                <td>Career</td>
-              </tr>
-              <tr>
-                <td>Feel free to </td>
-                <td>+1-301-340-3946 <br>
-                  info@draft.com</td>
-              </tr>
-            </tbody>
-          </table>
+        
+        <div class="footer_foot">
+
+          <div class="copyright">
+            <p>&copy; Draft 2021, All Rights Reserved.</p>
+          </div>
+
+          <div class="socials">
+            <img src="./assets/images/twitter.svg" alt="twitter">
+            <img src="./assets/images/face.svg" alt="face">
+            <img src="./assets/images/google.svg" alt="google">
+          </div>
+
         </div>
       </div>
     </footer>
